# length-delimited

./: .codecov.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
src/: bytes.rs  lib.rs  net.rs  primitives.rs  sealed.rs  string.rs
