[package]
name = "length-delimited"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/al8n/length-delimited"
homepage = "https://github.com/al8n/length-delimited"
documentation = "https://docs.rs/length-delimited"
description = "A trait for length-delimited encoding"
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["serialization", "encoding", "decoding", "leb128"]
categories = ["encoding", "no-std"]

[features]
default = ["std", "send", "sync", "static", "error"]
alloc = ["bstr1?/alloc"]
std = ["thiserror/default", "bstr1?/std", "bytes1?/std", "faststr02?/default"]

send = [] # Add `Send` bounds
sync = [] # Add `Sync` bounds
static = [] # Add 'static bounds
debug = []
display = []
error = ["debug", "display"] # Add `core::error::Error` bounds

[dependencies]
dbutils = { version = "0.12", default-features = false }
paste = "1"
thiserror = { version = "2", default-features = false }

bytes1 = { package = "bytes", version = "1", default-features = false, optional = true }
bstr1 = { package = "bstr", version = "1", default-features = false, optional = true }
smol_str03 = { package = "smol_str", version = "0.3", default-features = false, optional = true }
faststr02 = { package = "faststr", version = "0.2", default-features = false, optional = true }
triomphe01 = { package = "triomphe", version = "0.1", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
